<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.patrodyne.armstrong</groupId>
	<artifactId>armstrong-project</artifactId>
	<version>1.0.0-SNAPSHOT</version>
	<packaging>pom</packaging>
	<name>Patrodyne Armstrong - Project</name>
	<description>Patrodyne Armstrong is a collection of mathematical research prjects about Armstong numbers.</description>
	<url>https://github.com/patrodyne/armstrong</url>
	<inceptionYear>1977</inceptionYear>
	<licenses>
		<license>
			<name>BSD 3-Clause License</name>
			<url>https://raw.githubusercontent.com/patrodyne/armstrong/master/LICENSE.md</url>
			<distribution>repo or manual</distribution>
		</license>
	</licenses>
	<developers>
		<developer>
			<id>patrodyne</id>
			<name>Richard P. O'Sullivan</name>
			<email>rick.osullivan@patrodyne.org</email>
			<roles>
				<role>researcher</role>
			</roles>
		</developer>
		<developer>
			<id>peters</id>
			<name>James V. Peters</name>
			<roles>
				<role>researcher</role>
			</roles>
		</developer>
	</developers>
	<modules>
		<module>nysmj</module>
	</modules>
	<scm>
		<connection>scm:git:git@github.com:patrodyne/armstrong.git</connection>
		<developerConnection>scm:git:ssh://git@github.com/patrodyne/armstrong.git</developerConnection>
		<url>https://github.com/patrodyne/armstrong/tree/master</url>
		<tag>HEAD</tag>
	</scm>
	<issueManagement>
		<system>GitHub Issues</system>
		<url>https://github.com/patrodyne/armstrong/issues</url>
	</issueManagement>
	<!-- OSS Repository Hosting <https://central.sonatype.org/publish/publish-guide/> -->
	<distributionManagement>
		<repository>
			<id>ossrh</id>
			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
		</repository>
		<snapshotRepository>
			<id>ossrh</id>
			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
		</snapshotRepository>
	</distributionManagement>
	<properties>
		<maven-assembly-plugin.version>3.6.0</maven-assembly-plugin.version>
		<maven-bundle-plugin.version>5.1.9</maven-bundle-plugin.version>
		<maven-clean-plugin.version>3.2.0</maven-clean-plugin.version>
		<maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
		<maven-dependency-plugin.version>3.5.0</maven-dependency-plugin.version>
		<maven-deploy-plugin.version>3.0.0</maven-deploy-plugin.version>
		<maven-enforcer-plugin.version>3.2.1</maven-enforcer-plugin.version>
		<maven-failsafe-plugin.version>3.1.2</maven-failsafe-plugin.version>
		<maven-gpg-plugin.version>3.0.1</maven-gpg-plugin.version>
		<maven-install-plugin.version>3.1.0</maven-install-plugin.version>
		<maven-invoker-plugin.version>3.4.0</maven-invoker-plugin.version>
		<maven-jar-plugin.version>3.3.0</maven-jar-plugin.version>
		<maven-javadoc-plugin.version>3.6.3</maven-javadoc-plugin.version>
		<maven-jxr-plugin.version>3.3.2</maven-jxr-plugin.version>
		<maven-project-info-reports-plugin.version>3.4.2</maven-project-info-reports-plugin.version>
		<maven-release-plugin.version>3.0.0-M7</maven-release-plugin.version>
		<maven-replacer-plugin.version>1.4.1</maven-replacer-plugin.version>
		<maven-resources-plugin.version>3.3.1</maven-resources-plugin.version>
		<maven-shade-plugin.version>3.5.1</maven-shade-plugin.version>
		<maven-site-plugin.version>4.0.0-M12</maven-site-plugin.version>
		<maven-source-plugin.version>3.3.0</maven-source-plugin.version>
		<maven-surefire-plugin.version>3.1.2</maven-surefire-plugin.version>
		<maven-surefire-report-plugin.version>3.2.5</maven-surefire-report-plugin.version>
		<nexus-staging-maven-plugin.version>1.6.13</nexus-staging-maven-plugin.version>
		<exec-maven-plugin.version>3.1.0</exec-maven-plugin.version>
		<versions-maven-plugin.version>2.14.2</versions-maven-plugin.version>

		<junit-jupiter.version>5.10.2</junit-jupiter.version>
		<junit-platform.version>1.10.2</junit-platform.version>
		<maven.compiler.release>11</maven.compiler.release>
		<maven-min.version>3.9.0</maven-min.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<slf4j.version>2.0.12</slf4j.version>
		<xmlunit.version>1.6</xmlunit.version>

		<source>${basedir}/src</source>
		<target>${project.build.directory}</target>
	</properties>
	<dependencyManagement>
		<dependencies>
			<!-- JUnit -->
			<dependency>
				<groupId>org.junit.jupiter</groupId>
				<artifactId>junit-jupiter-api</artifactId>
				<version>${junit-jupiter.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.junit.jupiter</groupId>
				<artifactId>junit-jupiter-engine</artifactId>
				<version>${junit-jupiter.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.junit.jupiter</groupId>
				<artifactId>junit-jupiter-params</artifactId>
				<version>${junit-jupiter.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.junit.platform</groupId>
				<artifactId>junit-platform-suite</artifactId>
				<version>${junit-platform.version}</version>
				<scope>test</scope>
			</dependency>
			<!-- SLF4J -->
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-api</artifactId>
				<version>${slf4j.version}</version>
			</dependency>
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>jcl-over-slf4j</artifactId>
				<version>${slf4j.version}</version>
			</dependency>
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-simple</artifactId>
				<version>${slf4j.version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>
	<build>
		<defaultGoal>install</defaultGoal>
		<pluginManagement>
			<plugins>
				<plugin>
					<artifactId>maven-assembly-plugin</artifactId>
					<version>${maven-assembly-plugin.version}</version>
				</plugin>
				<plugin>
					<artifactId>maven-clean-plugin</artifactId>
					<version>${maven-clean-plugin.version}</version>
				</plugin>
				<plugin>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>${maven-compiler-plugin.version}</version>
					<configuration>
						<compilerArgs>
							<arg>-proc:full</arg>
						</compilerArgs>
					</configuration>
				</plugin>
				<plugin>
					<artifactId>maven-dependency-plugin</artifactId>
					<version>${maven-dependency-plugin.version}</version>
				</plugin>
				<plugin>
					<artifactId>maven-deploy-plugin</artifactId>
					<version>${maven-deploy-plugin.version}</version>
					<!-- Disable in favor of nexus-staging-maven-plugin -->
					<configuration>
						<skip>true</skip>
					</configuration>
				</plugin>
				<plugin>
					<artifactId>maven-install-plugin</artifactId>
					<version>${maven-install-plugin.version}</version>
				</plugin>
				<plugin>
					<artifactId>maven-invoker-plugin</artifactId>
					<version>${maven-invoker-plugin.version}</version>
				</plugin>
				<plugin>
					<artifactId>maven-jar-plugin</artifactId>
					<version>${maven-jar-plugin.version}</version>
					<configuration>
						<excludes>
							<exclude>**/.placeholder</exclude>
						</excludes>
					</configuration>
				</plugin>
				<plugin>
					<artifactId>maven-resources-plugin</artifactId>
					<version>${maven-resources-plugin.version}</version>
				</plugin>
				<plugin>
					<artifactId>maven-site-plugin</artifactId>
					<version>${maven-site-plugin.version}</version>
				</plugin>
				<plugin>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>${maven-surefire-plugin.version}</version>
					<configuration>
						<argLine>${env.JVM_SYS_ARGS}</argLine>
						<systemPropertiesFile>${root.basedir}/src/test/resources/jvmsystem.properties</systemPropertiesFile>
					</configuration>
				</plugin>
				<plugin>
					<artifactId>maven-surefire-report-plugin</artifactId>
					<version>${maven-surefire-report-plugin.version}</version>
				</plugin>
				<plugin>
					<artifactId>maven-failsafe-plugin</artifactId>
					<version>${maven-failsafe-plugin.version}</version>
				</plugin>
				<plugin>
					<artifactId>maven-jxr-plugin</artifactId>
					<version>${maven-jxr-plugin.version}</version>
				</plugin>
				<plugin>
					<artifactId>maven-project-info-reports-plugin</artifactId>
					<version>${maven-project-info-reports-plugin.version}</version>
				</plugin>
				<plugin>
					<artifactId>maven-shade-plugin</artifactId>
					<version>${maven-shade-plugin.version}</version>
				</plugin>
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>versions-maven-plugin</artifactId>
					<version>${versions-maven-plugin.version}</version>
					<configuration>
						<ruleSet>
							<ignoreVersions>
                                <ignoreVersion>
                                    <type>regex</type>
                                    <version>(.+\.Alpha\d|.+-alpha(\d|-\d+))</version>
                                </ignoreVersion>
								<ignoreVersion>
									<type>regex</type>
									<version>.+-M\d</version>
								</ignoreVersion>
								<ignoreVersion>
									<type>regex</type>
									<version>.+[\.-](CR|RC)\d</version>
								</ignoreVersion>
							</ignoreVersions>
						</ruleSet>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>exec-maven-plugin</artifactId>
					<version>${exec-maven-plugin.version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.felix</groupId>
					<artifactId>maven-bundle-plugin</artifactId>
					<version>${maven-bundle-plugin.version}</version>
					<!-- See https://issues.apache.org/jira/browse/FELIX-6606 -->
				</plugin>
				<plugin>
					<groupId>org.owasp</groupId>
					<artifactId>dependency-check-maven</artifactId>
					<version>8.0.2</version>
				</plugin>
			</plugins>
		</pluginManagement>

		<plugins>
			<plugin>
				<artifactId>maven-clean-plugin</artifactId>
			</plugin>
			<plugin>
				<artifactId>maven-resources-plugin</artifactId>
			</plugin>
			<plugin>
				<artifactId>maven-jar-plugin</artifactId>
			</plugin>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
			</plugin>
			<plugin>
				<artifactId>maven-surefire-plugin</artifactId>
			</plugin>
			<plugin>
				<artifactId>maven-install-plugin</artifactId>
			</plugin>
			<plugin>
				<artifactId>maven-release-plugin</artifactId>
				<version>${maven-release-plugin.version}</version>
				<configuration>
					<tagNameFormat>@{project.version}</tagNameFormat>
					<autoVersionSubmodules>true</autoVersionSubmodules>
					<releaseProfiles>nexus-deploy</releaseProfiles>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-site-plugin</artifactId>
			</plugin>
			<plugin>
				<artifactId>maven-source-plugin</artifactId>
				<version>${maven-source-plugin.version}</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<phase>verify</phase>
						<goals>
							<goal>jar-no-fork</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>${maven-javadoc-plugin.version}</version>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<phase>verify</phase>
						<goals>
							<goal>jar</goal>
						</goals>
						<configuration>
							<additionalOptions>
								<additionalOption>--link-modularity-mismatch=info</additionalOption>
							</additionalOptions>
							<detectLinks>true</detectLinks>
							<doclint>all,-missing</doclint>
							<failOnError>false</failOnError>
							<links>
								<link>https://javadoc.io/doc/org.junit.jupiter/junit-jupiter-api/${junit-jupiter.version}/</link>
							</links>
							<quiet>false</quiet>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<artifactId>maven-enforcer-plugin</artifactId>
				<version>${maven-enforcer-plugin.version}</version>
				<executions>
					<execution>
						<id>enforce-java-maven</id>
						<?m2e ignore?>
						<goals>
							<goal>enforce</goal>
						</goals>
						<configuration>
							<rules>
								<requireJavaVersion>
									<version>${maven.compiler.release}</version>
								</requireJavaVersion>
								<requireMavenVersion>
									<version>${maven-min.version}</version>
								</requireMavenVersion>
								<requirePluginVersions>
									<message>Best Practice is to always define plugin versions!</message>
									<banSnapshots>false</banSnapshots>
								</requirePluginVersions>
							</rules>    
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
	<reporting>
		<plugins>
			<plugin>
				<artifactId>maven-surefire-report-plugin</artifactId>
			</plugin>
			<plugin>
				<artifactId>maven-jxr-plugin</artifactId>
			</plugin>
		</plugins>
	</reporting>
	<profiles>
		<profile>
			<id>all</id>
			<modules>
				<module>nysmj</module>
			</modules>
		</profile>
		<profile>
			<!-- https://help.sonatype.com/repomanager2/staging-releases/configuring-your-project-for-deployment -->
			<!-- https://www.baeldung.com/maven-deploy-nexus -->
			<id>nexus-deploy</id>
			<build>
				<plugins>
					<plugin>
						<artifactId>maven-gpg-plugin</artifactId>
						<version>${maven-gpg-plugin.version}</version>
						<executions>
							<execution>
								<id>sign-artifacts</id>
								<phase>verify</phase>
								<goals>
									<goal>sign</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.sonatype.plugins</groupId>
						<artifactId>nexus-staging-maven-plugin</artifactId>
						<version>${nexus-staging-maven-plugin.version}</version>
						<extensions>true</extensions>
						<executions>
							<execution>
								<id>default-deploy</id>
								<phase>deploy</phase>
								<goals>
									<goal>deploy</goal>
								</goals>
							</execution>
						</executions>
						<!-- Skip staging the components locally when connecting to the repository manager -->
						<!-- We do not need staging for a simple deployment of -SNAPSHOT artifacts to Nexus -->
						<!-- Auto close the staging repository and release -->
						<configuration>
							<serverId>ossrh</serverId>
							<nexusUrl>https://oss.sonatype.org/</nexusUrl>
							<skipStaging>true</skipStaging>
							<autoReleaseAfterClose>true</autoReleaseAfterClose>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
</project>
